--- a/www.nass.gov.ng/79a1dd107e381f99e38bf93a1d9fb7f97bfafc2a.yml
+++ b/www.nass.gov.ng/79a1dd107e381f99e38bf93a1d9fb7f97bfafc2a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:25:57 GMT
+    - Fri, 30 Mar 2018 16:46:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WJ8snh8gc9jIfJBlXDEue1; path=/
+    - PHPSESSID=t%2C7Ana5WopKDN6OQIL86O1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:25:57 GMT
+recorded_at: Fri, 30 Mar 2018 16:46:14 GMT
