--- a/www.nass.gov.ng/82e562bcf66beca479b4f4dd963a50fe98b64ce6.yml
+++ b/www.nass.gov.ng/82e562bcf66beca479b4f4dd963a50fe98b64ce6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:27:47 GMT
+    - Fri, 30 Mar 2018 16:48:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IYSQ5N5hiemVP-y-9Ip2x2; path=/
+    - PHPSESSID=G%2CA%2CLgxF5F0KUVOEf4h0K2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:27:47 GMT
+recorded_at: Fri, 30 Mar 2018 16:48:40 GMT
