--- a/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
+++ b/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:34:55 GMT
+    - Fri, 30 Mar 2018 16:55:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Pgd3WlfsTS%2ChKckdep4BP2; path=/
+    - PHPSESSID=P4YkX0d4uGyzQsmAb9gNx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:34:55 GMT
+recorded_at: Fri, 30 Mar 2018 16:55:42 GMT
