--- a/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
+++ b/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:36:00 GMT
+    - Fri, 30 Mar 2018 16:56:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3tZdX0u39dJYbB9T9fm1C0; path=/
+    - PHPSESSID=2W-AtQiTDV%2CHHTkqbVeYD3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:36:01 GMT
+recorded_at: Fri, 30 Mar 2018 16:56:33 GMT
