--- a/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
+++ b/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:36:58 GMT
+    - Fri, 30 Mar 2018 16:57:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qVh09wU%2CSZubQoXSwiEO20; path=/
+    - PHPSESSID=mp3VafuKla9UjD1hCC0ie0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:36:58 GMT
+recorded_at: Fri, 30 Mar 2018 16:57:27 GMT
