--- a/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
+++ b/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:39:40 GMT
+    - Fri, 30 Mar 2018 17:00:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bCKckNGDu2%2CC%2C%2Cqg435JP3; path=/
+    - PHPSESSID=lujucQHHSElpLLBJGRZOo0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:39:40 GMT
+recorded_at: Fri, 30 Mar 2018 17:00:07 GMT
