--- a/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
+++ b/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:45:40 GMT
+    - Fri, 30 Mar 2018 17:06:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EtdQzsThO3a4LA7dhxWYz3; path=/
+    - PHPSESSID=%2C98Ysh-z%2CxppV8BEy3hk00; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:45:40 GMT
+recorded_at: Fri, 30 Mar 2018 17:06:40 GMT
