--- a/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
+++ b/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:47:32 GMT
+    - Fri, 30 Mar 2018 17:08:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CLPGPvF2Fsk5g-RQEDtI81; path=/
+    - PHPSESSID=kKv557LDbTwhRCvWtMDgF1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:47:32 GMT
+recorded_at: Fri, 30 Mar 2018 17:08:25 GMT
