--- a/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
+++ b/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:49:49 GMT
+    - Fri, 30 Mar 2018 17:10:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mrgbi2BfjV-pCUzcTrOT01; path=/
+    - PHPSESSID=zOxekeyRtL%2CgiNN1bxzmQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:49:49 GMT
+recorded_at: Fri, 30 Mar 2018 17:10:51 GMT
