--- a/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
+++ b/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:53:02 GMT
+    - Fri, 30 Mar 2018 17:14:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=clGzIP%2CKusMeK6ntHQ2pI0; path=/
+    - PHPSESSID=jzGBeZz00WwVoTmiSNPB70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:53:02 GMT
+recorded_at: Fri, 30 Mar 2018 17:14:16 GMT
