--- a/www.nass.gov.ng/2f82a78f4dc2d4ba4f917028b95f82468cd5a0d8.yml
+++ b/www.nass.gov.ng/2f82a78f4dc2d4ba4f917028b95f82468cd5a0d8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:54:25 GMT
+    - Fri, 30 Mar 2018 17:15:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2So1KS-n5I3B8ziUqRh6C0; path=/
+    - PHPSESSID=HtxIArEeCmUYD%2CdGMPehZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:54:25 GMT
+recorded_at: Fri, 30 Mar 2018 17:15:54 GMT
