--- a/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
+++ b/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:01:39 GMT
+    - Fri, 30 Mar 2018 17:22:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YmlRLFMevA8vJaZMLeaVW0; path=/
+    - PHPSESSID=FqWKs-HYYBx1p4%2Cl4g2iX0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:01:39 GMT
+recorded_at: Fri, 30 Mar 2018 17:22:06 GMT
