--- a/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
+++ b/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:02:38 GMT
+    - Fri, 30 Mar 2018 17:22:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PQc8xKzRRIu%2CSMyBAJDCa1; path=/
+    - PHPSESSID=hDUssbJGJ7gJ5pp9byvBH1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:02:38 GMT
+recorded_at: Fri, 30 Mar 2018 17:22:27 GMT
