--- a/www.nass.gov.ng/4321c2e32defceaea7e2ebbe07a5c99551b5b209.yml
+++ b/www.nass.gov.ng/4321c2e32defceaea7e2ebbe07a5c99551b5b209.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:03:25 GMT
+    - Fri, 30 Mar 2018 17:22:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8TaHNgV2pOO0z7%2CdmYzX43; path=/
+    - PHPSESSID=QPAokweZbCoGc96r0iTWl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:03:25 GMT
+recorded_at: Fri, 30 Mar 2018 17:22:56 GMT
