--- a/www.nass.gov.ng/d6ee9a1855eab7b9a85e02241c774c5206e72a1e.yml
+++ b/www.nass.gov.ng/d6ee9a1855eab7b9a85e02241c774c5206e72a1e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:08:36 GMT
+    - Fri, 30 Mar 2018 17:27:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JslX8HjHiieckCBueK6%2CS3; path=/
+    - PHPSESSID=lsBbFlEW93rxSuYXIyEBV3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:08:36 GMT
+recorded_at: Fri, 30 Mar 2018 17:27:49 GMT
