--- a/www.nass.gov.ng/8e1a902c867aec594f3d64350954a9970a282b32.yml
+++ b/www.nass.gov.ng/8e1a902c867aec594f3d64350954a9970a282b32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:10:02 GMT
+    - Fri, 30 Mar 2018 17:28:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sl24aGV1h-KulvPhdMyBY0; path=/
+    - PHPSESSID=AlafAj2nt%2CdmI2AJxoF1m1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:10:02 GMT
+recorded_at: Fri, 30 Mar 2018 17:28:28 GMT
