--- a/www.nass.gov.ng/3ad61656bc5eac3180a0c107db2488da3c186679.yml
+++ b/www.nass.gov.ng/3ad61656bc5eac3180a0c107db2488da3c186679.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:11:55 GMT
+    - Fri, 30 Mar 2018 17:29:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Nb3PrkOOc-nMvT9%2Caj5zQ0; path=/
+    - PHPSESSID=UtWMTZnzu0j52qhW2TOBV1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:11:55 GMT
+recorded_at: Fri, 30 Mar 2018 17:29:51 GMT
