--- a/www.nass.gov.ng/ae5791ffbcc878049eea39da9e45f8e36953e2f7.yml
+++ b/www.nass.gov.ng/ae5791ffbcc878049eea39da9e45f8e36953e2f7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:12:55 GMT
+    - Fri, 30 Mar 2018 17:31:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Iy8HUvaY1IMNlCQSP4vI30; path=/
+    - PHPSESSID=za4%2CGHFrN9rCOthd6Bq-E3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:12:55 GMT
+recorded_at: Fri, 30 Mar 2018 17:31:39 GMT
