--- a/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
+++ b/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:15:01 GMT
+    - Fri, 30 Mar 2018 17:33:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XpT8iUZ45S%2CRIw6hH8cjj0; path=/
+    - PHPSESSID=J6XLbAd2nQihNcvsuhgTd3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:15:01 GMT
+recorded_at: Fri, 30 Mar 2018 17:33:53 GMT
