--- a/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
+++ b/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:16:41 GMT
+    - Fri, 30 Mar 2018 17:35:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yL9DP9KxbxYt8R3JIsx4U2; path=/
+    - PHPSESSID=4qLtBAMvNJ2xWBx-%2Ck4yN2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:16:41 GMT
+recorded_at: Fri, 30 Mar 2018 17:35:45 GMT
