--- a/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
+++ b/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:30:40 GMT
+    - Fri, 30 Mar 2018 17:48:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LTFBPjXGlRHpi-y77b99e3; path=/
+    - PHPSESSID=DPbOcI2OLS%2CcSSCRrMlX-3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:30:40 GMT
+recorded_at: Fri, 30 Mar 2018 17:48:35 GMT
