--- a/www.nass.gov.ng/413908201ff32080d6abe7d36fadd2a21f9a1ee7.yml
+++ b/www.nass.gov.ng/413908201ff32080d6abe7d36fadd2a21f9a1ee7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:32:32 GMT
+    - Fri, 30 Mar 2018 17:51:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=n2ZvopcrpOuhF%2Cndmp3oF1; path=/
+    - PHPSESSID=rJAWLjN9xVz1sGAlgzod93; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:32:32 GMT
+recorded_at: Fri, 30 Mar 2018 17:51:29 GMT
