--- a/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
+++ b/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:34:46 GMT
+    - Fri, 30 Mar 2018 17:53:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dUJ1GNoUrMd7jcKzEun940; path=/
+    - PHPSESSID=cQK2Ug2vMnEmSkj2KHwN%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:34:46 GMT
+recorded_at: Fri, 30 Mar 2018 17:53:23 GMT
