--- a/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
+++ b/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:43:51 GMT
+    - Fri, 30 Mar 2018 18:01:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=50b%2CbsmZno7gkN7XPpIqP0; path=/
+    - PHPSESSID=xeL1juTEiJgzt4nIp1Kos3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:43:51 GMT
+recorded_at: Fri, 30 Mar 2018 18:01:44 GMT
