--- a/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
+++ b/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:51:25 GMT
+    - Fri, 30 Mar 2018 18:10:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bjWSkC%2C44tg4F0xw0-85A0; path=/
+    - PHPSESSID=7ai3xBI50VVCJLnUxjxxW3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:51:25 GMT
+recorded_at: Fri, 30 Mar 2018 18:10:41 GMT
