--- a/www.nass.gov.ng/bb4711120a8e408f615d49be27b27612989c613c.yml
+++ b/www.nass.gov.ng/bb4711120a8e408f615d49be27b27612989c613c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 03:59:53 GMT
+    - Fri, 30 Mar 2018 18:17:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YpelSZ9434Tmk3De0zPjj0; path=/
+    - PHPSESSID=Nek14pSsSaok-kClw%2C5d40; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 03:59:53 GMT
+recorded_at: Fri, 30 Mar 2018 18:17:03 GMT
