--- a/www.nass.gov.ng/12bfbb341dc7efdb28af220debe394f0d22849c1.yml
+++ b/www.nass.gov.ng/12bfbb341dc7efdb28af220debe394f0d22849c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 04:03:30 GMT
+    - Fri, 30 Mar 2018 18:19:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uI%2CJx0Sd6zYFoVQ5p4zL90; path=/
+    - PHPSESSID=JbXqycAqwBAlmxVDxIr3V1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 04:03:30 GMT
+recorded_at: Fri, 30 Mar 2018 18:19:57 GMT
