--- a/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
+++ b/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 04:06:22 GMT
+    - Fri, 30 Mar 2018 18:23:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vzrjhn94pbYJ-7PUIZszP1; path=/
+    - PHPSESSID=mdTZILfKLnH67LcWQg3O%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 04:06:22 GMT
+recorded_at: Fri, 30 Mar 2018 18:23:08 GMT
