--- a/www.nass.gov.ng/84c2590e44881040115f27164867c799b981f06c.yml
+++ b/www.nass.gov.ng/84c2590e44881040115f27164867c799b981f06c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 04:07:21 GMT
+    - Fri, 30 Mar 2018 18:24:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xWLDIf6TUeJWSMM2wS0JG2; path=/
+    - PHPSESSID=AQi56Bvj0Sgq%2C8IrGjlaa2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 04:07:21 GMT
+recorded_at: Fri, 30 Mar 2018 18:24:02 GMT
