--- a/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
+++ b/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 04:13:00 GMT
+    - Fri, 30 Mar 2018 18:29:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=n8ZehbdcRLNRs-JFg9K870; path=/
+    - PHPSESSID=TuzNsX813hn8FA8N%2COuHt3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 04:13:00 GMT
+recorded_at: Fri, 30 Mar 2018 18:29:22 GMT
